--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
+    "axios-mock-adapter": "^1.8.1",
     "node-sass": "^4.5.2",
     "proptypes": "^1.0.0",
     "react": "^15.5.4",
